@@ -214,6 +214,7 @@ prboom2/src/SDL/i_video.c -text svneol=native#unset
 prboom2/src/c_cmd.c -text svneol=native#unset
 prboom2/src/hu_stuff.c -text svneol=native#unset
 prboom2/src/inl/Makefile.am -text
+prboom2/src/mn_menus.c -text svneol=native#unset
 prboom2/src/p_spec.h -text svneol=native#unset
 prboom2/src/vidd/Makefile.am -text
 website/DOOM04.jpg -text
